# StreamChatPlayground

./: .gitignore  .gitmodules  .pdm-python  README.md  pyproject.toml  requirements.txt  start_local.sh  start_vllm.sh  tts_server.py  vllm_local.yaml  webui.py
Characters/XiaoWu/: sample.txt
Characters/ZhongLi/: vo_EQHDJ_talk_19_zhongli_07.lab
chat_playground/: __init__.py  callback.py  chat_zhipuai.py  model_defines.py
notebooks/: AgentPlayground.ipynb  DIPlayground.ipynb  LangchainPlayground.ipynb  Playwright.ipynb  dataset_preprocess.ipynb  pdf_ocr.ipynb
notebooks/pdf_utils/: requirements.txt
notebooks/pdf_utils/deepdoc/: __init__.py  huqie.py  ocr.py  postprocess.py  recognizer.py  table_structure_recognizer.py
notebooks/plugins/llm_extraction/: output_markdown_list.md  template.yaml
notebooks/prompts/planning/: output.md  plan_review.yaml  planning.yaml  planning_cn.yaml  review.yaml  template.yaml
notebooks/prompts/task_codegen/: plan_status.yaml  task_codegen.yaml
notebooks/prompts/task_plan/: output.md  template.yaml
notebooks/provider/: __init__.py  hunyuan_api.py
notebooks/tools/text_extractor/: llm_extractor.py  template.yaml
notebooks/utils/: common.py
