[project]
name = "StreamChatPlayground"
version = "0.2.0"
description = "Yet Another Chat Playground for Large Language Models (with LangChain and Streamlit)"
authors = [
    {name = "Hao Zhou", email = "rmusique@gmail.com"},
]

dependencies = [
    "streamlit>=1.30.0",
    "zhipuai>=2.0.1",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "playwright>=1.0.0",
    "ipykernel>=6.0.0",
    "langchain",
    "pip>=24.0",
    "metagpt @ file:///${PROJECT_ROOT}/MetaGPT",
]

requires-python = "!=3.9.7,<3.12,>=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "datasets>=2.0.0",
    "pandas>=2.1.1",
]
